wacc_examples/invalid_TEST/semanticErr/expressions/arrAccessWithUnidentifiedIden_US.wacc
# program performs boolean operations on arrays

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int[] x = [1,2];
  println x[y]
end
